Designing home page

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,121 @@ body{
 
 /* Home */
 
+.home-page {
+  padding: 2rem;
+}
+
+.hero-section {
+  background-image: url('./assets/hero.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 60vh;
+  display: flex;
+  padding-top: 200px;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+ 
+}
+
+.hero-title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.hero-subtitle {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-left: 25rem ;
+  margin-right: 25rem;
+  margin-bottom: 2rem;
+}
+
+
+.orange-button {
+  background-color: #EA3B3B;
+  color: white;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 1rem;
+  text-decoration: none; 
+  display: inline-block; 
+  box-shadow: 2px 2px  #3a383858;
+  transition: all .2s;
+
+}
+
+.orange-button:hover {
+  transform: translateY(2%);
+}
+
+.orange-button:last-child {
+  margin-right: 0;
+}
+
+
+.why-should-we-do-this {
+  padding: 2rem;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.description {
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0 30% 2rem 30%;
+}
+
+.benefits-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+.benefit-item {
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.contributors-section {
+  margin-top: 2rem;
+}
+
+.contributors-title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.contributors-description {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.learn-more-button {
+  background-color: #2196f3;
+  color: white;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.learn-more-button:hover {
+  transform: translateY(2%);
+}
+
 
 /* Footer */
 
